API error warning added

--- a/src/index.pug
+++ b/src/index.pug
@@ -8,10 +8,14 @@ head
 body
     section
         .weather
-            form
+            form.weather__form
                 input.weather__input(type="text")
                 button.weather__button Submit
             
-            .weather__result
+            .weather__current
+
+            .weather__hourly
+
+
 
     script(src="app.min.js")
