form submit hooked up to call the API

--- a/src/index.pug
+++ b/src/index.pug
@@ -10,7 +10,7 @@ body
         .weather
             form.weather__form
                 input.weather__input(type="text")
-                button.weather__button Submit
+                input.weather__button(type="submit" value="Submit")
             
             .weather__current
 
