Location displayed for the forecast

--- a/src/index.pug
+++ b/src/index.pug
@@ -13,7 +13,7 @@ body
                 input.weather__button(type="submit" value="Submit")
             
             .weather__current.weather__current--hidden
-                p.weather__location
+                h2.weather__location
                 .weather__temperature
                 .weather__details
 
