Basic styling of hourly section

--- a/src/index.pug
+++ b/src/index.pug
@@ -18,6 +18,6 @@ body
                 .weather__details
 
             button.weather__get-hourly.weather__get-hourly--hidden Get Hourly Forecast
-            .weather__hourly.weather__hourly--hidden
+            .weather__hourly
 
     script(src="app.min.js")
